Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-14490] Code completion not working in switch argument position #56845

Closed
xAlien95 opened this issue Apr 15, 2021 · 5 comments
Closed

[SR-14490] Code completion not working in switch argument position #56845

xAlien95 opened this issue Apr 15, 2021 · 5 comments
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. code completion Area → source tooling: code completion source tooling Area: IDE support, SourceKit, and other source tooling

Comments

@xAlien95
Copy link
Contributor

Previous ID SR-14490
Radar rdar://problem/76688441
Original Reporter @xAlien95
Type Bug
Status Resolved
Resolution Done
Environment

Xcode 12.4 (12D4e)
Swift Development Snapshot 2021-04-10 (a)

Additional Detail from JIRA
Votes 0
Component/s CodeCompletion
Labels Bug
Assignee @ahoppen
Priority Medium

md5: f348a44a3b962b565e5012bf5fa327af

Issue Description:

This is a regression. Code completion works as expected in Swift 5.3.2, but it fails in the last development snapshot (2021-04-10 (a)). Consider the following code snippet:

func foo(_: (Int) -> Void) {}

foo { x in
  switch x.#^COMPLETE^#
}

There are no suggested completions.

@xAlien95
Copy link
Contributor Author

cc @ahoppen

@ahoppen
Copy link
Contributor

ahoppen commented Apr 15, 2021

@swift-ci create

@ahoppen
Copy link
Contributor

ahoppen commented Apr 15, 2021

Thanks for reporting this @xAlien95. I’ve put up #36930 to fix the issue.

@ahoppen
Copy link
Contributor

ahoppen commented Apr 16, 2021

#36930 has been merged. This should be fixed in the next open source toolchain.

@xAlien95
Copy link
Contributor Author

That's been lightning fast, thank you @ahoppen! Should I "cc" you for other completion related issues?

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the source tooling Area: IDE support, SourceKit, and other source tooling label Feb 6, 2023
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. code completion Area → source tooling: code completion source tooling Area: IDE support, SourceKit, and other source tooling
Projects
None yet
Development

No branches or pull requests

3 participants